--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center text-md-start" </div>
-                    <h6>Hi,</h6>
+                    <h6>Hi, There</h6>
                     <h1>I'm Meraj<br><span>Web Developer.</span></h1>
                     <div class="mt-4">
-                        <a class="main-btn" href="">Download CV</a>
+                        <a class="main-btn" href="">
+                            Download Resume
+                            <i class="fas fa-download"></i>
+                        </a>
                     </div>
+
                 </div>
             </div>
     </section>
@@ -82,10 +86,10 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
                     <img src="images/about.png" class="img-fluid rounded-3" alt="AboutMe">
+                    <i class="fa fa-github-square"></i>
                 </div>
                 <div class="col-lg-7 ps-lg-5 text-center text-lg-start">
                     <div class="my-3 mb-lg-0">
-                        <span class="subtitle">My About Details</span>
                         <h1><span>About Me</span></h1>
                         <p>I'm a Web Developer. My name is MD MERAJUL HAQUE and I have completed my DIPLOMA in COMPUTER SCIENCE and ENGINEERING.</p>
 
@@ -116,32 +120,32 @@
 
                             <div class="tab-pane fade show active" id="pills-skill" role="tabpanel" aria-labelledby="pills-skill-tab">
                                 <div class="single-progress">
-                                    <h6>Designing</h6>
+                                    <h6>HTML</h6>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span class="label">95%</span>
+                                    <span class="label">75%</span>
                                 </div>
                                 <div class="single-progress">
-                                    <h6>Designing</h6>
+                                    <h6>CSS</h6>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span class="label">95%</span>
+                                    <span class="label">60%</span>
                                 </div>
                                 <div class="single-progress">
-                                    <h6>Designing</h6>
+                                    <h6>JAVASCRIPT</h6>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span class="label">95%</span>
+                                    <span class="label">40%</span>
                                 </div>
                                 <div class="single-progress">
-                                    <h6>Designing</h6>
+                                    <h6>BOOTSTRAP</h6>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <span class="label">95%</span>
+                                    <span class="label">30%</span>
 
                                 </div>
                             </div>
@@ -205,6 +209,57 @@
 
 
     <!-- About Section exit -->
+
+    <!-- Portfolio Section -->
+
+    <section id="portfolio" class="portfolio_wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center mb-4">
+                    <div class="my-3 mb-lg-0">
+                        <h1><span>My Projects</span></h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisici ng elit. Odio ullam explicabo molestias illum </p>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-mb-6 mb-4">
+                    <div class="card p-0">
+                        <span style="background-image: url('./images/pj1.jpeg');">
+
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-mb-6 mb-4">
+                    <div class="card p-0">
+                        <span style="background-image: url('./images/pj1.jpeg');">
+
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-mb-6 mb-4">
+                    <div class="card p-0">
+                        <span style="background-image: url('./images/pj1.jpeg');">
+
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-mb-6 mb-4">
+                    <div class="card p-0">
+                        <span style="background-image: url('./images/pj1.jpeg');">
+
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Portfolio Section exit -->
+
 
 
     <!-- Bootstrap 5 Js CDN links -->
