--- a/index.html
+++ b/index.html
@@ -226,32 +226,40 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <div class="card p-0">
-                        <span style="background-image: url('./images/pj1.jpeg');">
+                    <a href="#home">
+                        <div class="card p-0">
+                            <span style="background-image: url('./images/pj1.jpeg');">
 
                         </span>
-                    </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <div class="card p-0">
-                        <span style="background-image: url('./images/pj1.jpeg');">
+                    <a href="#home">
+                        <div class="card p-0">
+                            <span style="background-image: url('./images/pj1.jpeg');">
 
                         </span>
-                    </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <div class="card p-0">
-                        <span style="background-image: url('./images/pj1.jpeg');">
+                    <a href="#home">
+                        <div class="card p-0">
+                            <span style="background-image: url('./images/pj1.jpeg');">
 
                         </span>
-                    </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <div class="card p-0">
-                        <span style="background-image: url('./images/pj1.jpeg');">
+                    <a href="#home">
+                        <div class="card p-0">
+                            <span style="background-image: url('./images/pj1.jpeg');">
 
                         </span>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
