--- a/index.html
+++ b/index.html
@@ -268,6 +268,96 @@
 
     <!-- Portfolio Section exit -->
 
+    <!-- Contact Section -->
+    <section id="contact" class="contact_wrapper">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-lg-6 order-2 order-lg-1 pe-lg-5 text-lg-start text-center">
+                    <h1><span>Contact Me.</span></h1>
+                    <div class="row call_details mb-4">
+                        <label class="col-sm-3 col-lg-4">Call me directly</label>
+
+                        <div class="col-sm-9 col-lg-8 mb-3 mb-lg-2 text-md-start">
+                            <a href="javascript:void(0)">+91 7502461630</a>
+                        </div>
+
+                        <label class="col-sm-3 col-lg4">Contact Email</label>
+
+                        <div class="col-sm-9 col-lg-8 mb-3 mb-lg-2 text-md-start">
+                            <a href="mailto:haquemeraj95@gmail.com">haquemeraj95@gmail.com</a>
+                        </div>
+                    </div>
+                    <form>
+                        <div class="mb-4">
+                            <input type="text" class="form-control" placeholder="Name" autocomplete="off">
+                        </div>
+
+                        <div class="mb-4">
+                            <input type="number" class="form-control" placeholder="Number" autocomplete="off">
+                        </div>
+
+                        <div class="mb-4">
+                            <input type="email" class="form-control" placeholder="Email" autocomplete="off">
+                        </div>
+
+                        <div class="mb-4">
+                            <textarea id="message" cols="40" rows="4" placeholder="Write a message" autocomplete="off"></textarea>
+                        </div>
+                        <button type="submit" class="main-btn">
+                            Submit
+                        </button>
+                    </form>
+                </div>
+                <div class="col-lg-6 order-1 mb-4 order-lg-1 mb-lg-0">
+                    <img src="./images/about.png" alt="ContactImg" class="img-fluid">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- Contact Section exit -->
+
+    <!-- Footer Section -->
+
+    <section id="contact" class="footer_wrapper mt-3 mt-md-0">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-4 col-md-6 text-center text-md-start">
+                    <div class="footer-logo mb-3 mb-md-0">
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <ul class="list-unstyled d-flex justify-content-center justify-content-md-end
+                     justify-content-lg-center social-icon mb-3 mb-md-0">
+                        <li>
+                            <a href="#home"><i class="fab fa-github"></i></a>
+                        </li>
+                        <li>
+                            <a href="#home"><i class="fab fa-linkedin"></i></a>
+                        </li>
+                        <li>
+                            <a href="#home"><i class="fab fa-youtube"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                    <div class="copyright-text text-lg-start text-center mb-3 mb-lg-0">
+                        <p class="mb-0">Copyright © 2022 <a href="#home">Meraj. </a>All Rights Reserved.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Footer Section exit-->
+
 
 
     <!-- Bootstrap 5 Js CDN links -->
