--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         </div>
 
                         <div class="mb-4">
-                            <textarea id="message" cols="40" rows="4" placeholder="Write a message" autocomplete="off"></textarea>
+                            <textarea class="form-control" id="message" cols="40" rows="4" placeholder="Write a message" autocomplete="off"></textarea>
                         </div>
                         <button type="submit" class="main-btn">
                             Submit
