--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Meraj's Portfolio</title>
 
     <!-- FAVICON-->
-    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="icon" type="image/png" href="images/logo-fevicon.png">
 
     <!-- Bootstrap 5 CDN links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
