--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header_wrapper">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#home">
                     <img src="images/meemProfile.png" class="img-fluid" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -148,6 +148,14 @@
                                     <span class="label">30%</span>
 
                                 </div>
+                                <div class="single-progress">
+                                    <h6>Graphic Designing</h6>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <span class="label">50%</span>
+
+                                </div>
                             </div>
 
                             <div class="tab-pane fade" id="pills-award" role="tabpanel" aria-labelledby="pills-award-tab">
@@ -226,9 +234,18 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <a href="#home">
+                    <a href="projects/graphicD.html">
                         <div class="card p-0">
-                            <span style="background-image: url('./images/pj1.jpeg');">
+                            <span style="background-image: url('./images/portfolio1.jpeg');">
+
+                        </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-mb-6 mb-4">
+                    <a href="https://haque9570.github.io/BlueRythmMMH.github.io/">
+                        <div class="card p-0">
+                            <span style="background-image: url('./images/portfolio2.jpeg');">
 
                         </span>
                         </div>
@@ -252,15 +269,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-mb-6 mb-4">
-                    <a href="#home">
-                        <div class="card p-0">
-                            <span style="background-image: url('./images/pj1.jpeg');">
 
-                        </span>
-                        </div>
-                    </a>
-                </div>
             </div>
         </div>
 
@@ -327,7 +336,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-6 text-center text-md-start">
                     <div class="footer-logo mb-3 mb-md-0">
-                        <a href="#home">
+                        <a href="projects/graphicD.html">
                             <img src="./images/logo.png" alt="">
                         </a>
                     </div>
