--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     </form>
                 </div>
                 <div class="col-lg-6 order-1 mb-4 order-lg-1 mb-lg-0">
-                    <img src="./images/about.png" alt="ContactImg" class="img-fluid">
+                    <img src="./images/contact.png" alt="ContactImg" class="img-fluid">
                 </div>
             </div>
 
