--- a/projects/graphicD.html
+++ b/projects/graphicD.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-3 col-mb-6 mb-4">
                     <div class="card p-0">
-                        <span style="background-image: url('../images/GraphicD/1.png');">
+                        <span style="background-image: url('./images/GraphicD/1.png');">
 
                         </span>
                     </div>
