--- a/projects/graphicD.html
+++ b/projects/graphicD.html
@@ -16,8 +16,8 @@
     />
 
     <!-- Custom File's Link -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive-style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive-style.css">
 
 </head>
 
