--- a/projects/graphicD.html
+++ b/projects/graphicD.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-3 col-mb-6 mb-4">
                     <div class="card p-0">
-                        <span style="background-image: url('./images/GraphicD/1.png');">
+                        <span style="background-image: url('/images/GraphicD/1.png');">
 
                         </span>
                     </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
                     <div class="card p-0">
-                        <span style="background-image: url('../images/GraphicD/2.jpeg');">
+                        <span style="background-image: url('/images/GraphicD/2.jpeg');">
 
                         </span>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="col-lg-3 col-mb-6 mb-4">
 
                     <div class="card p-0">
-                        <span style="background-image: url('../images/GraphicD/3.jpeg');">
+                        <span style="background-image: url('/images/GraphicD/3.jpeg');">
 
                         </span>
                     </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
                     <div class="card p-0">
-                        <span style="background-image: url('../images/GraphicD/4.jpeg');">
+                        <span style="background-image: url('/images/GraphicD/4.jpeg');">
 
                         </span>
                     </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-lg-3 col-mb-6 mb-4">
                     <div class="card p-0">
-                        <span style="background-image: url('../images/GraphicD/5.jpeg');">
+                        <span style="background-image: url('/images/GraphicD/5.jpeg');">
 
                     </span>
                     </div>
