graphicD.html path added in index.html

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-mb-6 mb-4">
-                    <a href="projects/graphicD.html">
+                    <a href="/graphicD.html">
                         <div class="card p-0">
                             <span style="background-image: url('./images/portfolio1.jpeg');">
 
